# python-pypi-poc

./: LICENSE  README.md  generate_proto.py  main.py  pyproject.toml
.github/workflows/: publish.yml
src/test_lib/: __init__.py  lib.py
