[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "python-pypi-poc"
description = "A test poc lib"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = []

[dependency-groups]
build = [
	"grpcio-tools==1.76.0",
]

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
package-dir = "src"
includes = ["src/test_lib"]
excludes = ["**/.pytest_cache"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
